# news_equity_research_tool

./: .env.example  .gitignore  .vercelignore  CHATBOT_TRANSFORMATION_COMPLETE.md  DEPLOYMENT.md  FIX_SUMMARY.md  INTEGRATION_COMPLETE.md  README.md  SEARCH_MECHANISMS_EXPLAINED.md  STREAMLIT_DEPLOYMENT.md  SYSTEM_ARCHITECTURE_GUIDE.md  SYSTEM_DECISION_LOGIC.md  TAVILY_DEMO_GUIDE.md  TAVILY_SETUP.md  TECHNICAL_ARCHITECTURE.md  WEB_SEARCH_ENHANCEMENT.md  debug_llm.py  debug_reuters.py  demo_improvements.py  packages.txt  pyproject.toml  requirements-vercel.txt  requirements.txt  setup.sh  streamlit_app.py  streamlit_app_backup.py  streamlit_app_simple.py  temp_fix.py  test_alt_search.py  test_article_extraction.py  test_complete_flow.py  test_direct_fix.py  test_enhanced_search.py  test_extraction.py  test_fallback_logic.py  test_fetch.py  test_improved.py  test_intelligent.py  test_llm.py  test_manual_extract.py  (+8 more)
.streamlit/: config.toml
api/: index.py  requirements.txt
app/: advanced_search.py  ai.py  ai_original.py  relevance_checker.py  utils.py  utils_original.py  web.py  web_original.py
src/: app.py
tools/: run_get_response.py  run_tavily_test.py
